<resources>
    <string name="app_name">butter</string>
    <string name="butterLogo">Butter</string>
    <string name="splash_desc">MADE BY BUTTER</string>
    <string name="ex_john_smith">Ex: John Smith</string>
    <string name="username">Username</string>
    <string name="create_profile_descr">Enter your info for events and fun!</string>
    <string name="create_profile">Create Profile</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="phone_number">Phone Number (Optional)</string>
    <string name="phone_hint">Ex: 780-xxx-xxxx</string>
    <string name="role">Select Role</string>
    <string name="create_button">Create</string>
    <string name="facility_name">Facility Name</string>
    <string name="facility_hint">Eg. UASU</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
...
    <string name="delete_my_event">Delete Event</string>
    <string name="empty_phone">No phone given.</string>
    <string name="name_s">%s</string>
    <string name="announcement">Announcement</string>
    <string name="yes">Yes</string>
    <string name="sample_size">Sample size</string>
    <string name="ok">OK</string>
    <string name="invited_list">Invited List</string>

    <string-array name="roles_array">
        <item>Entrant</item>
        <item>Organizer</item>
        <item>Both</item>
...
